syntax = "proto3";

// The LLMRequest message definition.
message LlmQueryRequest {
  string input = 1;
  int32 maxWords = 2;
}

// The LogQueryResponse message definition.
message LlmQueryResponse {
  string input = 1;
  string output = 2;
}